--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,10 @@ script:
 
 after_script:
 - docker images
+
+notifications:
+  email:
+    recipients:
+      - cpe@mariadb.com
+    on_success: never # default: change
+    on_failure: always # default: always
