TODO-2678 CS & ES Docker to include jemalloc and/or have a documented way to add it
added jemalloc package and variable to activate LD_PRELOAD

--- a/10.2/Dockerfile
+++ b/10.2/Dockerfile
@@ -104,7 +104,7 @@ RUN set -ex; \
 	apt-get install -y \
 		"mariadb-server" \
 		$backupPackage \
-		socat \
+		socat libjemalloc1 \
 	; \
 	rm -rf /var/lib/apt/lists/*; \
 # comment out any "user" entires in the MySQL config ("docker-entrypoint.sh" or "--user" will handle user switching)
